# yolo-ipcamera

./: .gitignore  LICENSE  README.md  app.py  config.json  config.json.example  detector.py  pyproject.toml  requirements.txt  webhook_manager.py
