[project]
name = "yolo-ipcamera"
version = "0.1.0"
description = "Windows RTSP YOLO Object Monitor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics",
    "opencv-python",
    "customtkinter",
    "pystray",
    "Pillow",
    "requests",
    "torch",
    "torchvision"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

